<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".ui.PedidoActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rut"
            android:padding="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/rut_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pedido"
            android:padding="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/pedido_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/articles"
            android:padding="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/articulos_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_art"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_artEnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/articlesEnt"
            android:padding="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/articulos_entregados_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_artEnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:padding="2dp"
            app:startIconDrawable="@drawable/date_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:padding="2dp"
            app:startIconDrawable="@drawable/time_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail"
            android:padding="2dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/detail_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_subir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/im_photo1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:src="@drawable/add_photo_icon_grey"
            android:contentDescription="@string/photo1"/>

        <ImageView
            android:id="@+id/im_photo2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:src="@drawable/add_photo_icon_grey"
            android:contentDescription="@string/photo2"/>

        <ImageView
            android:id="@+id/im_photo3"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:src="@drawable/add_photo_icon_grey"
            android:contentDescription="@string/photo3"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_subir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Subir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.956">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>